# rmm

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  readme.md
.githooks/: README.md  install.sh  pre-commit
.github/workflows/: ci.yml  release.yml
doc/: configuration.md  plan.md  specs.md  to_rust.md  workshop.md
macos/: CODE_SIGNING.md  Info.plist  PERMISSIONS.md  README.md  build-app.sh  sign-app.sh
src/: activity.rs  config.rs  error.rs  lib.rs  main.rs  mouse.rs  state.rs  tray.rs
tests/: integration.rs  mouse_test.rs
