[package]
name = "rmm"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.2"
rdev = "0.5"
tray-item = { version = "0.10", features = ["ksni"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
png = "0.17"
native-dialog = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true